<resources>
    <string name="app_name">miguel1</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Re calcular</string>

    <!--IMC App-->
    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estas por debajo del lo óptimo para tu peso y altura</string>

    <string name="title_bajo_normal">Normal</string>
    <string name="description_normal">Estas en lo óptimo para tu peso y altura</string>

    <string name="title_bajo_sobrepeso">Sobre peso</string>
    <string name="description_sobrepeso">Estas por encima de lo óptimo para tu peso y altura</string>

    <string name="title_bajo_Obesidad">Obesidad</string>
    <string name="description_Obesidad">Estas Muy por encima de lo óptimo para tu peso y altura</string>

    <!--    ToDo App-->

    <string name="todo_title">Bienvenido Miguel</string>
    <string name="todo_categories">Categorias</string>
    <string name="todo_tasks">Tareas</string>
    <string name="todo_dialog_add_task">Añade la tarea</string>

    <string name="todo_dialog_Business">Negocios</string>
    <string name="todo_dialog_Personal">Personal</string>
    <string name="todo_dialog_Other">Otros</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>


</resources>