<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/todo_background_todo_app"
    android:padding="24dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:hint="@string/todo_dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:text="@string/todo_dialog_Business"
            android:textColor="@color/white"
            android:checked="true"
            android:layout_width="match_parent"
            android:buttonTint="@color/todo_business_category"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbPersonal"
            android:text="@string/todo_dialog_Personal"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:buttonTint="@color/todo_personal_category"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbOther"
            android:text="@string/todo_dialog_Other"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:buttonTint="@color/todo_other_category"
            android:layout_height="wrap_content"/>



    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/todo_dialog_add_task_button"
        android:layout_height="wrap_content"/>



</LinearLayout>