<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical"
        tools:context=".ToDoApp.ToDoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="44dp"
            android:text="@string/todo_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            style="@style/ToDoSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/todo_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ToDoSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/todo_tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_plus"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/todo_accent"
        app:fabSize="normal"
        app:tint="@color/white" />
</FrameLayout>